--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://fonts.cdnfonts.com/css/circe" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-
     <title>Экспофорум</title>
 </head>
 
@@ -17,7 +16,7 @@
             <div class="header__top">
                 <div class="header__top-inside">
                     <div class="header__logo">
-                        <img src="/img/SVG/logo1.svg" alt="" class="header__logo-img">
+                        <a href="#"><img src="/img/png/logo1.png" alt="" class="header__logo-img"></a>
                     </div>
                     <nav class="header__nav">
                         <ul class="nav">
@@ -112,7 +111,6 @@
 
     <main class="main">
         <nav class="main__nav">
-
             <div class="main__nav-columns container">
                 <div class="main__nav-text">
                     <div class="main__nav-text-title">
@@ -126,10 +124,7 @@
                         <li class="main__nav-link"><a href="#">Конгресс-центр</a></li>
                         <li class="main__nav-link"><a href="#">Спорт-центр</a></li>
                     </ul>
-
                 </div>
-
-
                 <div class="main__nav-text">
                     <div class="main__nav-text-title">
                         <h2>Экспонентам</h2>
@@ -141,9 +136,7 @@
                         <li class="main__nav-link"><a href="#">Центр деловых контактов</a></li>
                         <li class="main__nav-link"><a href="#">Забронировать гостиницу</a></li>
                     </ul>
-
                 </div>
-
                 <div class="main__nav-text">
                     <div class="main__nav-text-title">
                         <h2>Посетителям</h2>
@@ -154,9 +147,7 @@
                         <li class="main__nav-link"><a href="#">Забронировать гостиницу</a></li>
                         <li class="main__nav-link"><a href="#">Центр деловых контактов</a></li>
                     </ul>
-
                 </div>
-
                 <div class="main__nav-text">
                     <div class="main__nav-text-title">
                         <h2>Прессе</h2>
@@ -166,11 +157,128 @@
                         <li class="main__nav-link"><a href="#">Пресс-служба</a></li>
                         <li class="main__nav-link"><a href="#">Правила аккредитации</a></li>
                     </ul>
-
                 </div>
-
             </div>
         </nav>
+
+        <div class="main__cards-wrap">
+            <div class="main__cards container">
+                <div class="main__cards-header">
+                    <h2 class="main__text">Текущие и будущие мероприятия</h2>
+                    <div class="main__link-wrap">
+                        <a href="#">
+                            <div class="main__link">Все мероприятия</div>
+                            <div class="main__arrow">
+                                <img src="/img/SVG/arrowBlack.svg" alt="">
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="main__cards-grid">
+
+                    <div class="main__card">
+                        <img class="main__card-img" src="/img/JPG/axpoElka.jpg" alt="">
+                        <p class="main__card-data">2 января 2020 г. – 7 января 2020 г.</p>
+                        <a class="main__card-link main__card-link_color_red" href="#">ЭКСПО ЕЛКА</a>
+                        <p class="main__card-text">Парк интерактивных развлечений</p>
+                    </div>
+
+                    <div class="main__card">
+                        <img class="main__card-img" src="/img/JPG/junwex.jpg" alt="">
+                        <p class="main__card-data">5 февраля 2020 г. – 9 февраля 2020 г.</p>
+                        <a class="main__card-link main__card-link_color_red" href="#">Junwex Петербург</a>
+                        <p class="main__card-text">Выставка ювелирных изделий</p>
+                    </div>
+
+                    <div class="main__card">
+                        <img class="main__card-img" src="/img/JPG/nevskiiLarec.jpg" alt="">
+                        <p class="main__card-data">7 февраля 2020 г. – 9 февраля 2020 г.</p>
+                        <a class="main__card-link main__card-link_color_red" href="#">Невский ларец</a>
+                        <p class="main__card-text">Выставка-ярмарка народных художественных
+                            промыслов и ремесел</p>
+                    </div>
+
+                    <div class="main__card">
+                        <img class="main__card-img" src="/img/JPG/ponaexali.jpg" alt="">
+                        <p class="main__card-data">14 февраля 2020 г. – 23 февраля 2020 г.</p>
+                        <a class="main__card-link main__card-link_color_red" href="#">ПОНАЕХАЛИ!</a>
+                        <p class="main__card-text">Специализированная арт-ярмарка</p>
+                    </div>
+
+                    <div class="main__card">
+                        <img class="main__card-img" src="/img/JPG/vetCamp.jpg" alt="">
+                        <p class="main__card-data">18 февраля 2020 г. – 21 февраля 2020 г.</p>
+                        <a class="main__card-link main__card-link_color_red" href="#">VET.CAMP</a>
+                        <p class="main__card-text">Конференция для ветеринарных врачей</p>
+                    </div>
+
+                    <div class="main__card">
+                        <img class="main__card-img" src="/img/JPG/vetCampVistovka.jpg" alt="">
+                        <p class="main__card-data">26 февраля 2020 г. – 28 февраля 2020 г.</p>
+                        <a class="main__card-link main__card-link_color_red" href="#">ExpoHoReCa</a>
+                        <p class="main__card-text">Специализированная выставка</p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="main__info-wrap">
+            <div class="main__info container">
+                <div class="main__info-imgs">
+                    <img class="main__info-img" src="/img/JPG/parkMesto.jpg" alt="">
+                    <img src="/img/JPG/axpoElka2.jpg" alt="">
+                </div>
+
+                <div class="main__news">
+
+                    <div class="main__news-header">
+                        <h2 class="main__text">Новости</h2>
+                        <div class="main__link-wrap">
+                            <a href="#">
+                                <div class="main__link">Все новости</div>
+                                <div class="main__arrow">
+                                    <img src="/img/SVG/arrowBlack.svg" alt="">
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="main__news-list">
+                        <a class="main__new" href="#">
+                            <img src="/img/JPG/nov4january.jpg" alt="">
+                            <div class="main__new-text">
+                                <p class="main__card-text main__card-text_color_red">4 января 2020 г.</p>
+                                <h3 class="main__card-link">Как объединилась реальность и<br>виртуальность – LIKEE PARTY
+                                </h3>
+                            </div>
+
+                        </a>
+                        <a class="main__new" href="#">
+                            <img src="/img/JPG/nov2january1.jpg" alt="">
+                            <div class="main__new-text">
+                                <p class="main__card-text main__card-text_color_red">2 января 2020 г.</p>
+                                <h3 class="main__card-link">Как объединилась реальность и<br>виртуальность – LIKEE PARTY
+                                </h3>
+                            </div>
+
+                        </a>
+                        <a class="main__new" href="#">
+                            <img src="/img/JPG/nov2january2.jpg" alt="">
+                            <div class="main__new-text">
+                                <p class="main__card-text main__card-text_color_red">2 января 2020 г.</p>
+                                <h3 class="main__card-link">Как объединилась реальность и<br>виртуальность – LIKEE PARTY
+                                </h3>
+                            </div>
+
+                        </a>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
     </main>
 </body>
 
