--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <span class="header__nav-btn-icon"></span>
                     </button>
 
-                    <div class="header__mobile-nav">
+                    <div class="header__mobile-nav header__mobile-nav_hidden">
                         <a class="header__mobile-logo" href="#"><img src="/img/SVG/logo2.svg" alt=""></a>
                         <div class="header__mobile-list">
                             <ul>
@@ -190,7 +190,7 @@
                 <div class="main__cards-header">
                     <h2 class="main__text">Текущие и будущие мероприятия</h2>
                     <div class="main__link-wrap">
-                        <a href="#">
+                        <a class="main__link-title" href="#">
                             <div class="main__link">Все мероприятия</div>
                             <div class="main__arrow">
                                 <img src="/img/SVG/arrowBlack.svg" alt="">
@@ -252,7 +252,8 @@
                 <div class="main__info-imgs">
                     <a class="main__info-link" href="#"><img class="main__info-img" src="/img/JPG/parkMesto.jpg"
                             alt=""></a>
-                    <a class="main__info-link" href="#"><img src="/img/JPG/axpoElka2.jpg" alt=""></a>
+                    
+                    <a class="main__info-link" href="#"><img class="main__info-img" src="/img/JPG/axpoElka2.jpg" alt=""></a>
                 </div>
 
                 <div class="main__news">
@@ -271,7 +272,7 @@
 
                     <div class="main__news-list">
                         <a class="main__new" href="#">
-                            <img src="/img/JPG/nov4january.jpg" alt="">
+                            <img class="main__new-img" src="/img/JPG/nov4january.jpg" alt="">
                             <div class="main__new-text">
                                 <p class="main__card-text main__card-text_color_red">4 января 2020 г.</p>
                                 <h3 class="main__card-link">Как объединилась реальность и<br>виртуальность – LIKEE PARTY
@@ -280,7 +281,7 @@
 
                         </a>
                         <a class="main__new" href="#">
-                            <img src="/img/JPG/nov2january1.jpg" alt="">
+                            <img class="main__new-img" src="/img/JPG/nov2january1.jpg" alt="">
                             <div class="main__new-text">
                                 <p class="main__card-text main__card-text_color_red">2 января 2020 г.</p>
                                 <h3 class="main__card-link">Как объединилась реальность и<br>виртуальность – LIKEE PARTY
@@ -289,7 +290,7 @@
 
                         </a>
                         <a class="main__new" href="#">
-                            <img src="/img/JPG/nov2january2.jpg" alt="">
+                            <img class="main__new-img" src="/img/JPG/nov2january2.jpg" alt="">
                             <div class="main__new-text">
                                 <p class="main__card-text main__card-text_color_red">2 января 2020 г.</p>
                                 <h3 class="main__card-link">Как объединилась реальность и<br>виртуальность – LIKEE PARTY
@@ -338,7 +339,7 @@
                         <h3 class="footer__title">Экспонентам</h3>
                         <ul class="footer__nav-linkes">
                             <li class="footer__nav-link"><a href="#">Общие условия участия</a></li>
-                            <li class="footer__nav-link"><a href="#">Услуги экспонентамa></li>
+                            <li class="footer__nav-link"><a href="#">Услуги экспонентам</a></li>
                             <li class="footer__nav-link"><a href="#">Документы экспонентам</a></li>
                             <li class="footer__nav-link"><a href="#">Забронировать гостиницу</a></li>
                         </ul>
@@ -406,7 +407,7 @@
         </div>
 
     </footer>
-
+    <script src="/js/style.js"></script>
 </body>
 
 </html>
