--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://fonts.cdnfonts.com/css/circe" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="/css/media.css">
+    <link rel="stylesheet" href="./css/media.css">
     <title>Экспофорум</title>
 </head>
 
@@ -21,7 +21,7 @@
                     </button>
 
                     <div class="header__mobile-nav header__mobile-nav_hidden">
-                        <a class="header__mobile-logo" href="#"><img src="/img/SVG/logo2.svg" alt=""></a>
+                        <a class="header__mobile-logo" href="#"><img src="./img/SVG/logo2.svg" alt="logo"></a>
                         <div class="header__mobile-list">
                             <ul>
                                 <li><a href="#">О комплексе</a></li>
@@ -34,7 +34,7 @@
                     </div>
 
                     <div class="header__logo">
-                        <a class="header__link-logo" href="#"><img src="/img/png/logo1.png" alt=""
+                        <a class="header__link-logo" href="#"><img src="./img/png/logo1.png" alt="logo"
                                 class="header__logo-img"></a>
                     </div>
                     <nav class="header__nav">
@@ -48,14 +48,14 @@
                     </nav>
 
                     <div class="header__search-box">
-                        <button class="header__search-btn"><img src="/img/SVG/search.svg" alt=""></button>
+                        <button class="header__search-btn"><img src="./img/SVG/search.svg" alt="search"></button>
                         <input type="search" class="header__search-input" name="" placeholder="Поиск...">
 
                     </div>
 
                     <div class="header__lang">
                         <div class="header__globus">
-                            <img src="/img/SVG/globe.svg" alt="" class="header__globus-img">
+                            <img src="./img/SVG/globe.svg" alt="icon" class="header__globus-img">
                         </div>
                         <div class="header__lang-text">English</div>
                     </div>
@@ -71,7 +71,7 @@
                         <a class="header__link-wrap" href="#">
                             <div class="header__link">О комплексе</div>
                             <div class="header__arrow">
-                                <img src="/img/SVG/arrowWhite.svg" alt="">
+                                <img src="./img/SVG/arrowWhite.svg" alt="arrow">
                             </div>
                         </a>
                     </div>
@@ -85,7 +85,7 @@
                             <a class="header__link-wrap" href="#">
                                 <div class="header__link">Подробнее</div>
                                 <div class="header__arrow">
-                                    <img src="/img/SVG/arrowWhite.svg" alt="">
+                                    <img src="./img/SVG/arrowWhite.svg" alt="arrow">
                                 </div>
                             </a>
                         </div>
@@ -97,7 +97,7 @@
                             <a class="header__link-wrap" href="#">
                                 <div class="header__link">Подробнее</div>
                                 <div class="header__arrow">
-                                    <img src="/img/SVG/arrowWhite.svg" alt="">
+                                    <img src="./img/SVG/arrowWhite.svg" alt="arrow">
                                 </div>
                             </a>
                         </div>
@@ -109,7 +109,7 @@
                             <a class="header__link-wrap" href="#">
                                 <div class="header__link">Подробнее</div>
                                 <div class="header__arrow">
-                                    <img src="/img/SVG/arrowWhite.svg" alt="">
+                                    <img src="./img/SVG/arrowWhite.svg" alt="arrow">
                                 </div>
                             </a>
                         </div>
@@ -121,7 +121,7 @@
                             <a class="header__link-wrap" href="#">
                                 <div class="header__link">Подробнее</div>
                                 <div class="header__arrow">
-                                    <img src="/img/SVG/arrowWhite.svg" alt="">
+                                    <img src="./img/SVG/arrowWhite.svg" alt="arrow">
                                 </div>
                             </a>
                         </div>
@@ -192,7 +192,7 @@
                         <a class="main__link-title" href="#">
                             <div class="main__link">Все мероприятия</div>
                             <div class="main__arrow">
-                                <img src="/img/SVG/arrowBlack.svg" alt="">
+                                <img src="./img/SVG/arrowBlack.svg" alt="arrow">
                             </div>
                         </a>
                     </div>
@@ -200,21 +200,21 @@
                 <div class="main__cards-grid">
 
                     <div class="main__card">
-                        <img class="main__card-img" src="/img/JPG/axpoElka.jpg" alt="">
+                        <img class="main__card-img" src="./img/JPG/axpoElka.jpg" alt="img">
                         <p class="main__card-data">2 января 2020 г. – 7 января 2020 г.</p>
                         <a class="main__card-link main__card-link_color_red" href="#">ЭКСПО ЕЛКА</a>
                         <p class="main__card-text">Парк интерактивных развлечений</p>
                     </div>
 
                     <div class="main__card">
-                        <img class="main__card-img" src="/img/JPG/junwex.jpg" alt="">
+                        <img class="main__card-img" src="./img/JPG/junwex.jpg" alt="img">
                         <p class="main__card-data">5 февраля 2020 г. – 9 февраля 2020 г.</p>
                         <a class="main__card-link main__card-link_color_red" href="#">Junwex Петербург</a>
                         <p class="main__card-text">Выставка ювелирных изделий</p>
                     </div>
 
                     <div class="main__card">
-                        <img class="main__card-img" src="/img/JPG/nevskiiLarec.jpg" alt="">
+                        <img class="main__card-img" src="./img/JPG/nevskiiLarec.jpg" alt="img">
                         <p class="main__card-data">7 февраля 2020 г. – 9 февраля 2020 г.</p>
                         <a class="main__card-link main__card-link_color_red" href="#">Невский ларец</a>
                         <p class="main__card-text">Выставка-ярмарка народных художественных
@@ -222,21 +222,21 @@
                     </div>
 
                     <div class="main__card">
-                        <img class="main__card-img" src="/img/JPG/ponaexali.jpg" alt="">
+                        <img class="main__card-img" src="./img/JPG/ponaexali.jpg" alt="img">
                         <p class="main__card-data">14 февраля 2020 г. – 23 февраля 2020 г.</p>
                         <a class="main__card-link main__card-link_color_red" href="#">ПОНАЕХАЛИ!</a>
                         <p class="main__card-text">Специализированная арт-ярмарка</p>
                     </div>
 
                     <div class="main__card">
-                        <img class="main__card-img" src="/img/JPG/vetCamp.jpg" alt="">
+                        <img class="main__card-img" src="./img/JPG/vetCamp.jpg" alt="img">
                         <p class="main__card-data">18 февраля 2020 г. – 21 февраля 2020 г.</p>
                         <a class="main__card-link main__card-link_color_red" href="#">VET.CAMP</a>
                         <p class="main__card-text">Конференция для ветеринарных врачей</p>
                     </div>
 
                     <div class="main__card">
-                        <img class="main__card-img" src="/img/JPG/vetCampVistovka.jpg" alt="">
+                        <img class="main__card-img" src="./img/JPG/vetCampVistovka.jpg" alt="img">
                         <p class="main__card-data">26 февраля 2020 г. – 28 февраля 2020 г.</p>
                         <a class="main__card-link main__card-link_color_red" href="#">ExpoHoReCa</a>
                         <p class="main__card-text">Специализированная выставка</p>
@@ -249,10 +249,11 @@
         <div class="main__info-wrap">
             <div class="main__info container">
                 <div class="main__info-imgs">
-                    <a class="main__info-link" href="#"><img class="main__info-img" src="/img/JPG/parkMesto.jpg"
-                            alt=""></a>
-                    
-                    <a class="main__info-link" href="#"><img class="main__info-img" src="/img/JPG/axpoElka2.jpg" alt=""></a>
+                    <a class="main__info-link" href="#"><img class="main__info-img" src="./img/JPG/parkMesto.jpg"
+                            alt="img"></a>
+
+                    <a class="main__info-link" href="#"><img class="main__info-img" src="./img/JPG/axpoElka2.jpg"
+                            alt="img"></a>
                 </div>
 
                 <div class="main__news">
@@ -263,7 +264,7 @@
                             <a href="#">
                                 <div class="main__link">Все новости</div>
                                 <div class="main__arrow">
-                                    <img src="/img/SVG/arrowBlack.svg" alt="">
+                                    <img src="./img/SVG/arrowBlack.svg" alt="img">
                                 </div>
                             </a>
                         </div>
@@ -271,7 +272,7 @@
 
                     <div class="main__news-list">
                         <a class="main__new" href="#">
-                            <img class="main__new-img" src="/img/JPG/nov4january.jpg" alt="">
+                            <img class="main__new-img" src="./img/JPG/nov4january.jpg" alt="img">
                             <div class="main__new-text">
                                 <p class="main__card-text main__card-text_color_red">4 января 2020 г.</p>
                                 <h3 class="main__card-link">Как объединилась реальность и<br>виртуальность – LIKEE PARTY
@@ -280,7 +281,7 @@
 
                         </a>
                         <a class="main__new" href="#">
-                            <img class="main__new-img" src="/img/JPG/nov2january1.jpg" alt="">
+                            <img class="main__new-img" src="./img/JPG/nov2january1.jpg" alt="img">
                             <div class="main__new-text">
                                 <p class="main__card-text main__card-text_color_red">2 января 2020 г.</p>
                                 <h3 class="main__card-link">Как объединилась реальность и<br>виртуальность – LIKEE PARTY
@@ -289,7 +290,7 @@
 
                         </a>
                         <a class="main__new" href="#">
-                            <img class="main__new-img" src="/img/JPG/nov2january2.jpg" alt="">
+                            <img class="main__new-img" src="./img/JPG/nov2january2.jpg" alt="img">
                             <div class="main__new-text">
                                 <p class="main__card-text main__card-text_color_red">2 января 2020 г.</p>
                                 <h3 class="main__card-link">Как объединилась реальность и<br>виртуальность – LIKEE PARTY
@@ -368,11 +369,11 @@
                     <div class="footer__nav-buttons">
                         <h3 class="footer__title">Приложение</h3>
                         <button class="footer__app-store">
-                            <img src="/img/buttons/appstore.svg" alt="">
+                            <img src="./img/buttons/appstore.svg" alt="appstore">
                         </button>
 
                         <button class="footer__app-store">
-                            <img src="/img/buttons/googlePlay.svg" alt="">
+                            <img src="./img/buttons/googlePlay.svg" alt="googlePlay">
                         </button>
                     </div>
                 </nav>
@@ -384,10 +385,10 @@
                 <div class="footer__social">
                     <h3 class="footer__title-social">Мы в соц. сетях</h3>
                     <div class="footer__icons">
-                        <button class="footer__btn-media"><img src="/img/SVG/youTube.svg" alt=""></button>
-                        <button class="footer__btn-media"><img src="/img/SVG/vk.svg" alt=""></button>
-                        <button class="footer__btn-media"><img src="/img/SVG/facebook.svg" alt=""></button>
-                        <button class="footer__btn-media"><img src="/img/SVG/instagram.svg" alt=""></button>
+                        <button class="footer__btn-media"><img src="./img/SVG/youTube.svg" alt="youTube"></button>
+                        <button class="footer__btn-media"><img src="./img/SVG/vk.svg" alt="vk"></button>
+                        <button class="footer__btn-media"><img src="./img/SVG/facebook.svg" alt="facebook"></button>
+                        <button class="footer__btn-media"><img src="./img/SVG/instagram.svg" alt="instagram"></button>
                     </div>
                 </div>
                 <div class="footer__folow">
@@ -397,8 +398,8 @@
                     <div class="footer__form-wrap">
                         <form class="footer__form" name="email">
                             <p><input class="footer__input" type="email" placeholder="Введите ваш e-mail"></input></p>
-                            <button class="footer__bgc-icon"><img class="footer__form-icon" src="/img/form/form.svg"
-                                    alt=""></button>
+                            <button class="footer__bgc-icon"><img class="footer__form-icon" src="./img/form/form.svg"
+                                    alt="icon"></button>
                         </form>
                     </div>
                 </div>
